--- a/LiteTube/Controls/ProfileSections.xaml
+++ b/LiteTube/Controls/ProfileSections.xaml
@@ -169,6 +169,19 @@
                 </StackPanel>
             </ListBoxItem>
 
+            <ListBoxItem common:ItemClickCommand.Command="{Binding LikedCommand}"
+                          Visibility="{Binding IsAuthorized, Converter={StaticResource BooleanToVisibilityConverter}}"
+                          Margin="0,0,0,10">
+                <StackPanel Orientation="Horizontal" 
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center">
+                    <ContentPresenter ContentTemplate="{StaticResource LikedIcon}"
+                                      HorizontalAlignment="Left" />
+                    <TextBlock Text="{Binding Path=LocalizedResources.LikedVideos, Source={StaticResource LocalizedStrings}}"
+                               Style="{StaticResource SectionTextBlockStyle}" />
+                </StackPanel>
+            </ListBoxItem>
+
             <ListBoxItem common:ItemClickCommand.Command="{Binding HistoryCommand}"
                           Visibility="{Binding IsAuthorized, Converter={StaticResource BooleanToVisibilityConverter}}"
                           Margin="0,0,0,10">
