--- a/LiteTube/Controls/ProfileSections.xaml
+++ b/LiteTube/Controls/ProfileSections.xaml
@@ -2,16 +2,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:common="clr-namespace:LiteTube.Common"
-    xmlns:viewModels="clr-namespace:LiteTube.ViewModels">
+    xmlns:common="clr-namespace:LiteTube.Common">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Themes/ProfileIcons.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <DataTemplate x:Key="ProfileSectionsDataTemplate">
-        <ListBox toolkit:TiltEffect.IsTiltEnabled="True"
+        <ListBox toolkit:TiltEffect.IsTiltEnabled="True" 
+                 ScrollViewer.VerticalScrollBarVisibility="Hidden"
                  Margin="0"
                  ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}">
 
