--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -185,24 +185,32 @@
                                    Margin="{Binding IsReplay, Converter={StaticResource CommentMarginConverter}}"/>
 
                             <StackPanel Grid.Column="1"
-                                        Margin="0,0,0,0">
-
-                                <StackPanel Orientation="Horizontal">
+                                        Margin="0,-2,0,0">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
                                     <HyperlinkButton Content="{Binding AuthorDisplayName}"
-                                                     Margin="0,0,0,0"
                                                      Command="{Binding ChannelCommand}"
                                                      CommandParameter="{Binding AuthorChannelId}"
-                                                     FontSize="{StaticResource PhoneFontSizeNormal}"/>
+                                                     FontSize="{StaticResource PhoneFontSizeNormal}"
+                                                     Foreground="{StaticResource PhoneSecondaryForegroundBrush}"
+                                                     HorizontalAlignment="Left"
+                                                     HorizontalContentAlignment="Left"/>
                                     <TextBlock TextWrapping="NoWrap"
+                                               Grid.Column="1"
                                                Text="{Binding PublishedAtRaw}"
+                                               HorizontalAlignment="Right"
                                                Style="{StaticResource PhoneTextNormalStyle}"
-                                               Margin="0,0,0,0"/>
-                                </StackPanel>
+                                               Foreground="{StaticResource PhoneSecondaryForegroundBrush}"
+                                               Margin="0"/>
+                                </Grid>
 
                                 <TextBlock Text="{Binding TextDisplay}" 
                                            Style="{StaticResource PhoneTextNormalStyle}"
                                            TextWrapping="Wrap"
-                                           Margin="10,0,0,0"/>
+                                           Margin="10,5,0,0"/>
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
