--- a/LiteTube/ChannelPage.xaml
+++ b/LiteTube/ChannelPage.xaml
@@ -83,6 +83,8 @@
                                 <Run Text="{Binding Path=LocalizedResources.videos, Source={StaticResource LocalizedStrings}}"/>
                         </TextBlock>
                         <TextBlock Text="{Binding Description}"
+                                   Margin="{StaticResource DefaultControlMargin}"
+                                   Style="{StaticResource PhoneTextSmallStyle}"
                                    TextWrapping="Wrap" />
                     </StackPanel>
                 </ScrollViewer>
