--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -2,9 +2,11 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:sys="clr-namespace:System;assembly=mscorlib"
-  xmlns:local="clr-namespace:Microsoft.PlayerFramework;assembly=Microsoft.PlayerFramework">
+  xmlns:local="clr-namespace:Microsoft.PlayerFramework;assembly=Microsoft.PlayerFramework"
+  xmlns:controls="clr-namespace:LiteTube.Controls">
     <SolidColorBrush x:Key="TransportBackgroundBrush" Color="#80000000"/>
     <SolidColorBrush x:Key="TransportReversedBackgroundBrush" Color="#80000000"/>
+    <SolidColorBrush x:Key="ControlBackgroundBrush" Color="#33000000"/>
     <SolidColorBrush x:Key="PlayerButtonsBrush" Color="White"/>
     <sys:Double x:Key="SliderTrackThemeHeight">5</sys:Double>
 
@@ -797,7 +799,7 @@
     </ControlTemplate>
 
     <Style TargetType="local:ControlPanel">
-        <Setter Property="Background" Value="#33000000"/>
+        <Setter Property="Background" Value="{StaticResource ControlBackgroundBrush}"/>
         <Setter Property="IsTabStop" Value="False"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
@@ -807,7 +809,7 @@
         <Setter Property="Template" Value="{StaticResource ControlPanelTemplate}"/>
     </Style>
 
-    <Style TargetType="local:MediaPlayer">
+    <Style TargetType="controls:LiteTubePlayer">
         <Setter Property="InteractiveDeactivationMode" Value="All"/>
         <Setter Property="AutoHideBehavior" Value="All"/>
         <Setter Property="IsTimeRemainingVisible" Value="False"/>
@@ -966,31 +968,46 @@
                         </Grid>
                         <Grid x:Name="ErrorsContainer" Visibility="Collapsed"/>
                         <Grid x:Name="InteractivityContainer" Visibility="Collapsed">
-                            <local:ControlPanel x:Name="ControlPanel" ViewModel="{TemplateBinding InteractiveViewModel}"
-                                IsGoLiveButtonVisible="{TemplateBinding IsGoLiveVisible}"
-                                IsInfoButtonVisible="{TemplateBinding IsInfoVisible}"
-                                IsMoreButtonVisible="{TemplateBinding IsMoreVisible}"
-                                IsAudioSelectionButtonVisible="{TemplateBinding IsAudioSelectionVisible}"
-                                IsCaptionSelectionButtonVisible="{TemplateBinding IsCaptionSelectionVisible}"
-                                IsTimeElapsedButtonVisible="{TemplateBinding IsTimeElapsedVisible}"
-                                IsDurationButtonVisible="{TemplateBinding IsDurationVisible}"
-                                IsTimeRemainingButtonVisible="{TemplateBinding IsTimeRemainingVisible}"
-                                IsFastForwardButtonVisible="{TemplateBinding IsFastForwardVisible}"
-                                IsStopButtonVisible="{TemplateBinding IsStopVisible}"
-                                IsRewindButtonVisible="{TemplateBinding IsRewindVisible}"
-                                IsSkipPreviousButtonVisible="{TemplateBinding IsSkipPreviousVisible}"
-                                IsSkipNextButtonVisible="{TemplateBinding IsSkipNextVisible}"
-                                IsSkipBackButtonVisible="{TemplateBinding IsSkipBackVisible}"
-                                IsSkipAheadButtonVisible="{TemplateBinding IsSkipAheadVisible}"
-                                IsReplayButtonVisible="{TemplateBinding IsReplayVisible}"
-                                IsResolutionIndicatorVisible="{TemplateBinding IsResolutionIndicatorVisible}"
-                                IsSignalStrengthVisible="{TemplateBinding IsSignalStrengthVisible}"
-                                IsFullScreenButtonVisible="{TemplateBinding IsFullScreenVisible}"
-                                IsSlowMotionButtonVisible="{TemplateBinding IsSlowMotionVisible}"
-                                IsPlayPauseButtonVisible="{TemplateBinding IsPlayPauseVisible}"
-                                IsVolumeButtonVisible="{TemplateBinding IsVolumeVisible}"
-                                IsZoomButtonVisible="{TemplateBinding IsZoomVisible}"
-                                IsTimelineVisible="{TemplateBinding IsTimelineVisible}"/>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <StackPanel Orientation="Horizontal" Height="60"
+                                        Background="{StaticResource ControlBackgroundBrush}">
+                                <TextBlock Text="{Binding VideoTitle,RelativeSource={RelativeSource TemplatedParent}}"
+                                           VerticalAlignment="Center"
+                                           Margin="30,0,0,0"
+                                           Foreground="{StaticResource PlayerButtonsBrush}"/>
+                            </StackPanel>
+
+                            <local:ControlPanel x:Name="ControlPanel" 
+                                                Grid.Row="2"
+                                                ViewModel="{TemplateBinding InteractiveViewModel}"
+                                                IsGoLiveButtonVisible="{TemplateBinding IsGoLiveVisible}"
+                                                IsInfoButtonVisible="{TemplateBinding IsInfoVisible}"
+                                                IsMoreButtonVisible="{TemplateBinding IsMoreVisible}"
+                                                IsAudioSelectionButtonVisible="{TemplateBinding IsAudioSelectionVisible}"
+                                                IsCaptionSelectionButtonVisible="{TemplateBinding IsCaptionSelectionVisible}"
+                                                IsTimeElapsedButtonVisible="{TemplateBinding IsTimeElapsedVisible}"
+                                                IsDurationButtonVisible="{TemplateBinding IsDurationVisible}"
+                                                IsTimeRemainingButtonVisible="{TemplateBinding IsTimeRemainingVisible}"
+                                                IsFastForwardButtonVisible="{TemplateBinding IsFastForwardVisible}"
+                                                IsStopButtonVisible="{TemplateBinding IsStopVisible}"
+                                                IsRewindButtonVisible="{TemplateBinding IsRewindVisible}"
+                                                IsSkipPreviousButtonVisible="{TemplateBinding IsSkipPreviousVisible}"
+                                                IsSkipNextButtonVisible="{TemplateBinding IsSkipNextVisible}"
+                                                IsSkipBackButtonVisible="{TemplateBinding IsSkipBackVisible}"
+                                                IsSkipAheadButtonVisible="{TemplateBinding IsSkipAheadVisible}"
+                                                IsReplayButtonVisible="{TemplateBinding IsReplayVisible}"
+                                                IsResolutionIndicatorVisible="{TemplateBinding IsResolutionIndicatorVisible}"
+                                                IsSignalStrengthVisible="{TemplateBinding IsSignalStrengthVisible}"
+                                                IsFullScreenButtonVisible="{TemplateBinding IsFullScreenVisible}"
+                                                IsSlowMotionButtonVisible="{TemplateBinding IsSlowMotionVisible}"
+                                                IsPlayPauseButtonVisible="{TemplateBinding IsPlayPauseVisible}"
+                                                IsVolumeButtonVisible="{TemplateBinding IsVolumeVisible}"
+                                                IsZoomButtonVisible="{TemplateBinding IsZoomVisible}"
+                                                IsTimelineVisible="{TemplateBinding IsTimelineVisible}"/>
                         </Grid>
                         <Grid x:Name="LoaderViewContainer" Visibility="Collapsed"/>
                         <Grid x:Name="BufferingContainer" Visibility="Collapsed"/>
